jira integration completed